# eksel

./: .gitignore  License.md  README.md  SECURITY.md  eksel.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml
exe/: build_exe.bat  build_exe.py  eksel.spec
